--- a/src/Atoms/TextBox/style.scss
+++ b/src/Atoms/TextBox/style.scss
@@ -3,6 +3,9 @@
   label {
     color: var(--white);
   }
+  input {
+    color: var(--white);
+  }
   label.Mui-focused {
     color: var(--primary-color);
   }
