--- a/src/Components/Login/style.scss
+++ b/src/Components/Login/style.scss
@@ -6,21 +6,20 @@
   height: 80vh;
 
   .textBox {
-    margin-top: 10px;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
   }
   button {
-    margin-top: 10px;
-    margin-bottom: 10px;
+    margin-top: 20px;
   }
   .broder {
-    border: 1px var(--primary-color) solid;
+    border: 3px var(--primary-color) solid;
+    border-radius: 20px;
     width: 60%;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    padding: 20px;
+    padding: 40px 20px;
   }
   @media (max-width: 1280px) {
     height: 30%;
