--- a/src/App.scss
+++ b/src/App.scss
@@ -7,7 +7,11 @@
   background-position: center;
   width: 100vw;
   height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   .main-content {
+    width: 100%;
     color: var(--primary-color);
     padding: 60px;
     @media (max-width: 1280px) {
