--- a/src/Components/LandingPagePatient/style.scss
+++ b/src/Components/LandingPagePatient/style.scss
@@ -1,17 +1,7 @@
 .LandingPage {
-  //   display: flex;
-  //   justify-content: center;
-  //   align-items: center;
-  display: flex;
-
-  flex-wrap: nowrap;
   justify-content: center;
-  align-content: center;
-  align-items: center;
-  .icons {
-    flex: 0 1 auto;
-    flex-direction: column;
-    align-self: auto;
-    text-align: center; /*optional*/
+  display: flex;
+  .AvatarIcon {
+    margin: 20px;
   }
 }
