--- a/src/Components/LandingPagePatient/style.scss
+++ b/src/Components/LandingPagePatient/style.scss
@@ -1,7 +1,17 @@
 .LandingPage {
-  justify-content: center;
-  display: flex;
-  .AvatarIcon {
-    margin: 20px;
+  position: relative;
+  .button_create {
+    display: flex;
+    justify-content: flex-end;
+    position: absolute;
+    top: -130px;
+    right: 80px;
+  }
+  .alter_icon {
+    justify-content: center;
+    display: flex;
+    .AvatarIcon {
+      margin: 20px;
+    }
   }
 }
