--- a/src/App.scss
+++ b/src/App.scss
@@ -2,6 +2,7 @@
   margin: 0;
   padding: 0;
   background-image: url("./Assests/images/Background.png");
+  background-color: var(--secondary-color);
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-position: center;
@@ -14,12 +15,8 @@
     width: 100%;
     color: var(--primary-color);
     padding: 60px;
-    @media (max-width: 1280px) {
-      padding: 40px;
-    }
-    @media (max-width: 480px) {
-      padding: 10px;
-    }
+    max-width: 1440px;
+
     .title {
       color: var(--white);
       font-size: 70px;
@@ -29,6 +26,12 @@
       color: var(--white);
       font-size: 26px;
       margin-bottom: 20px;
+    }
+    @media (max-width: 1280px) {
+      padding: 40px;
+    }
+    @media (max-width: 480px) {
+      padding: 10px;
     }
   }
 }
