--- a/src/Components/Login/style.scss
+++ b/src/Components/Login/style.scss
@@ -4,7 +4,12 @@
   align-items: center;
   margin: auto;
   height: 80vh;
-
+  position: relative;
+  .CreateAccount {
+    position: absolute;
+    top: 0px;
+    right: 0px;
+  }
   .textBox {
     margin-bottom: 20px;
   }
