--- a/src/App.scss
+++ b/src/App.scss
@@ -9,6 +9,7 @@
   width: 100vw;
   height: 100vh;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   .main-content {
