--- a/src/Components/ChatRoom/style.scss
+++ b/src/Components/ChatRoom/style.scss
@@ -1,5 +1,6 @@
 .ChatRoom {
   color: var(--white);
+
   .chat-space {
     overflow: auto;
     max-height: 400px;
@@ -9,6 +10,10 @@
     /* Hide scrollbar for IE, Edge and Firefox */
     -ms-overflow-style: none; /* IE and Edge */
     scrollbar-width: none; /* Firefox */
+  }
+  .button_create {
+    display: flex;
+    justify-content: flex-end;
   }
 }
 .modal3Dmessage {
