Create patient api integration

--- a/src/App.scss
+++ b/src/App.scss
@@ -16,6 +16,8 @@
     color: var(--primary-color);
     padding: 60px;
     max-width: 1440px;
+    max-height: 80%;
+    overflow: auto;
 
     .title {
       color: var(--white);
