--- a/src/Components/LandingPagePatient/style.scss
+++ b/src/Components/LandingPagePatient/style.scss
@@ -4,9 +4,9 @@
     display: flex;
     justify-content: flex-end;
     position: absolute;
-    top: -130px;
-    right: 80px;
+    width: 100%;
   }
+
   .alter_icon {
     justify-content: center;
     display: flex;
