--- a/src/Components/ChatRoom/style.scss
+++ b/src/Components/ChatRoom/style.scss
@@ -20,15 +20,32 @@
   width: 100%;
   height: 100%;
   display: flex;
+
   .canva {
     width: 50% !important;
   }
   .ChatSec {
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    justify-content: space-between;
     width: 50%;
     height: 50%;
     border: 2px var(--primary-color) solid;
     margin: 10px;
+    padding: 10px;
+    .message-title {
+      color: var(--primary-color);
+      text-align: center;
+      margin-bottom: 10px;
+    }
+    .speech-button {
+      color: var(--primary-color);
+      cursor: pointer;
+    }
+    .message-text {
+      color: var(--white);
+      height: 75%;
+      overflow: auto;
+    }
   }
 }
