api for create account

--- a/src/Atoms/TextBox/style.scss
+++ b/src/Atoms/TextBox/style.scss
@@ -15,7 +15,9 @@
     .MuiOutlinedInput-notchedOutline {
     border-color: var(--primary-color);
   }
-
+  textarea {
+    color: var(--white);
+  }
   @media (max-width: 1024px) {
     width: 40%;
   }
