--- a/src/Components/ChatRoom/style.scss
+++ b/src/Components/ChatRoom/style.scss
@@ -57,6 +57,11 @@
       padding: 10px;
       .textBox {
         width: 100%;
+        margin-bottom: 10px;
+      }
+      .btn-main {
+        display: flex;
+        justify-content: flex-end;
       }
     }
   }
