--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,11 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
+textarea,
+input,
+label {
+  font-family: "Croissant One", cursive !important;
+}
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
