--- a/src/Atoms/PageTitle/style.scss
+++ b/src/Atoms/PageTitle/style.scss
@@ -1,7 +1,7 @@
 .PageTitle {
   font-size: 60px;
   color: var(--white);
-  position: absolute;
+  // position: absolute;
   margin: auto;
   display: flex;
   justify-content: space-between;
