--- a/src/Components/CreateAccount/style.scss
+++ b/src/Components/CreateAccount/style.scss
@@ -9,7 +9,8 @@
   border: 3px var(--primary-color) solid;
   border-radius: 20px;
   width: 60%;
-  .textBox {
+  .textBox,
+  .dropdown {
     margin-bottom: 20px;
   }
   @media (max-width: 1280px) {
