--- a/src/Components/ChatRoom/style.scss
+++ b/src/Components/ChatRoom/style.scss
@@ -66,3 +66,22 @@
     }
   }
 }
+.semdMessageModal {
+  width: 100%;
+  height: 100%;
+  display: flex;
+
+  .canva {
+    width: 50% !important;
+  }
+  .message-sec {
+    border: 2px var(--primary-color) solid;
+    width: 50%;
+    padding: 20px;
+    .dropdown,
+    .textBox {
+      margin-bottom: 20px;
+      width: 100%;
+    }
+  }
+}
