--- a/src/Components/CreateAccount/style.scss
+++ b/src/Components/CreateAccount/style.scss
@@ -2,24 +2,22 @@
   display: flex;
   justify-content: center;
   flex-direction: column;
-  height: 30;
   padding: 40px 20px;
   align-items: center;
   margin: auto;
   border: 3px var(--primary-color) solid;
   border-radius: 20px;
   width: 60%;
+  margin-top: 20px;
+  max-height: calc(100vh - 30vh);
+  overflow: auto;
   .textBox,
   .dropdown {
     margin-bottom: 20px;
   }
-  @media (max-width: 1280px) {
-    height: 30%;
+  &::-webkit-scrollbar {
+    display: none; /* Safari and Chrome */
   }
-  @media (max-width: 1024px) {
-    height: 40%;
-  }
-  @media (max-width: 480px) {
-    height: 100%;
-  }
+  -ms-overflow-style: none; /* Internet Explorer 10+ */
+  scrollbar-width: none; /* Firefox */
 }
