--- a/src/Components/CreateAlter/style.scss
+++ b/src/Components/CreateAlter/style.scss
@@ -2,24 +2,83 @@
   display: flex;
   justify-content: center;
   flex-direction: column;
-  height: 30;
   padding: 40px 20px;
   align-items: center;
   margin: auto;
   border: 3px var(--primary-color) solid;
   border-radius: 20px;
   width: 60%;
+  margin-top: 20px;
+  height: calc(100vh - 30vh);
+  overflow: auto;
+  .formArea {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    height: 100%;
+  }
+  &::-webkit-scrollbar {
+    display: none; /* Safari and Chrome */
+  }
+  -ms-overflow-style: none; /* Internet Explorer 10+ */
+  scrollbar-width: none; /* Firefox */
   .textBox,
   .dropdown {
     margin-bottom: 20px;
+    margin: 0 10px;
   }
-  @media (max-width: 1280px) {
-    height: 30%;
+  .avataorIcon {
+    margin-bottom: 20px;
+    width: 150px;
+    max-height: 150px;
+    border: 1px solid var(--primary-color);
+    border-radius: 5px;
+    cursor: pointer;
+    text-align: center;
+    img#defaultAvatar {
+      width: 150px;
+      height: 100px;
+    }
   }
-  @media (max-width: 1024px) {
-    height: 40%;
+}
+.avatarList {
+  height: 100%;
+  .title {
+    font-size: 20px;
+    text-align: center;
+    color: var(--white);
+    height: 10%;
   }
-  @media (max-width: 480px) {
-    height: 100%;
+  .avatarsDisplay {
+    display: flex;
+    flex-wrap: wrap;
+    overflow: auto;
+    height: 80%;
+    max-height: 90%;
+    &::-webkit-scrollbar {
+      display: none; /* Safari and Chrome */
+    }
+    -ms-overflow-style: none; /* Internet Explorer 10+ */
+    scrollbar-width: none; /* Firefox */
+  }
+  .btn-main {
+    margin-top: 20px;
+    display: flex;
+    justify-content: flex-end;
+  }
+  .iconList {
+    width: 100px;
+    height: 100px;
+    border: 1px solid var(--white);
+    border-radius: 5px;
+    margin: 10px;
+    img {
+      width: 100px;
+      height: 100px;
+    }
+    &.selected,
+    &:hover {
+      border: 1px solid var(--primary-color);
+    }
   }
 }
