--- a/src/Components/CreateAccount/style.scss
+++ b/src/Components/CreateAccount/style.scss
@@ -13,11 +13,17 @@
   overflow: auto;
   .textBox,
   .dropdown {
-    margin-bottom: 20px;
+    margin: 0 20px 20px;
   }
   &::-webkit-scrollbar {
     display: none; /* Safari and Chrome */
   }
   -ms-overflow-style: none; /* Internet Explorer 10+ */
   scrollbar-width: none; /* Firefox */
+  .formArea {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    height: 100%;
+  }
 }
