--- a/src/Components/Login/style.scss
+++ b/src/Components/Login/style.scss
@@ -5,6 +5,7 @@
   margin: auto;
   height: 80vh;
   position: relative;
+  margin-top: 20px;
   .CreateAccount {
     position: absolute;
     top: 0px;
