--- a/src/Components/CreateAlter/style.scss
+++ b/src/Components/CreateAlter/style.scss
@@ -24,8 +24,7 @@
   scrollbar-width: none; /* Firefox */
   .textBox,
   .dropdown {
-    margin-bottom: 20px;
-    margin: 0 10px;
+    margin: 0 20px 20px;
   }
   .avataorIcon {
     margin-bottom: 20px;
