--- a/src/Components/Login/style.scss
+++ b/src/Components/Login/style.scss
@@ -2,14 +2,17 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
   margin: auto;
   height: 80vh;
-  position: relative;
+  // position: relative;
+
   margin-top: 20px;
   .CreateAccount {
-    position: absolute;
-    top: 0px;
-    right: 0px;
+    width: 100%;
+    display: flex;
+    justify-content: flex-end;
+    margin-bottom: 20px;
   }
   .textBox {
     margin-bottom: 20px;
