--- a/src/Components/CreateAlter/style.scss
+++ b/src/Components/CreateAlter/style.scss
@@ -24,7 +24,7 @@
   scrollbar-width: none; /* Firefox */
   .textBox,
   .dropdown {
-    margin: 0 20px 20px;
+    margin: 0 20px;
   }
 
   .avataorIcon {
@@ -38,7 +38,7 @@
     text-align: center;
     img#defaultAvatar {
       width: 150px;
-      height: 100px;
+      height: 150px;
     }
     .addIcon {
       position: absolute;
