alter default creation

--- a/src/Components/CreateAccount/style.scss
+++ b/src/Components/CreateAccount/style.scss
@@ -1,4 +1,4 @@
-.CreateDetails {
+.CreateDetailsPatient {
   display: flex;
   justify-content: center;
   flex-direction: column;
@@ -26,4 +26,6 @@
     flex-wrap: wrap;
     height: 100%;
   }
+}
+.CreateTherapistAccount {
 }
