--- a/src/Components/MyRoom/style.scss
+++ b/src/Components/MyRoom/style.scss
@@ -1,14 +1,26 @@
 .RoomChatSpace {
   display: flex;
   width: 100%;
-  height: 100vh;
+  height: 70vh;
   .Unity_Room {
     width: 70%;
-    height: 70%;
+    height: 100%;
     padding-right: 20px;
   }
   .ChatSapce {
+    .message-title {
+      color: var(--white);
+      font-size: 25px;
+      text-align: center;
+      text-decoration: underline;
+    }
     width: 30%;
-    // padding: 20px;
+    overflow: auto;
+    max-height: 100%;
+    -ms-overflow-style: none; /* Internet Explorer 10+ */
+    scrollbar-width: none; /* Firefox */
+    &::-webkit-scrollbar {
+      display: none; /* Safari and Chrome */
+    }
   }
 }
