--- a/src/Atoms/Navigation/style.scss
+++ b/src/Atoms/Navigation/style.scss
@@ -13,6 +13,12 @@
   .Title {
     font-size: 30px;
   }
+  .button-collection {
+    display: flex;
+    button {
+      margin-right: 15px;
+    }
+  }
   .Navs {
     display: flex;
     div {
