--- a/src/Components/MyRoom/style.scss
+++ b/src/Components/MyRoom/style.scss
@@ -2,10 +2,27 @@
   display: flex;
   width: 100%;
   height: 70vh;
-  .Unity_Room {
+
+  .unityspace {
     width: 70%;
     height: 100%;
-    padding-right: 20px;
+    position: relative;
+    .Unity_Room {
+      width: 100%;
+      height: 100%;
+      padding-right: 20px;
+    }
+    .altertag {
+      position: absolute;
+      width: 200px;
+      left: calc(50% - 100px);
+      top: 30px;
+      background-color: var(--white);
+      border: 2px solid var(--secondary-color);
+      border-radius: 5px;
+      padding: 5px 0;
+      text-align: center;
+    }
   }
   .ChatSapce {
     .message-title {
