--- a/src/Components/MyRoom/style.scss
+++ b/src/Components/MyRoom/style.scss
@@ -31,6 +31,29 @@
       text-align: center;
       text-decoration: underline;
     }
+    .message-sec {
+      width: 90%;
+      padding: 20px;
+      .dropdown,
+      .textBox {
+        margin-bottom: 20px;
+        width: 100%;
+      }
+      .message {
+        color: var(--white);
+        padding-bottom: 10px;
+      }
+      .speech-button {
+        margin-bottom: 10px;
+        padding: 5px;
+        border: 1px solid var(--primary-color);
+        width: fit-content;
+        border-radius: 5px;
+      }
+    }
+    .SpeechToText {
+      flex-wrap: wrap;
+    }
     width: 30%;
     overflow: auto;
     max-height: 100%;
