--- a/src/Components/MyRoom/style.scss
+++ b/src/Components/MyRoom/style.scss
@@ -1,3 +1,8 @@
+.main-mroom {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
 .RoomChatSpace {
   display: flex;
   width: 100%;
@@ -61,6 +66,24 @@
     scrollbar-width: none; /* Firefox */
     &::-webkit-scrollbar {
       display: none; /* Safari and Chrome */
+    }
+  }
+}
+.sendMessageMyRoom {
+  width: 450px;
+
+  left: calc(50% - 225px);
+  .semdMessageModal {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    .message-sec {
+      padding: 20px;
+      .dropdown,
+      .textBox {
+        margin-bottom: 20px;
+        width: 100%;
+      }
     }
   }
 }
