--- a/src/Atoms/CheckBox/style.scss
+++ b/src/Atoms/CheckBox/style.scss
@@ -1,3 +1,5 @@
+/* styles for the checkbox component /
+/  styles apply to the checkbox component wrapper */
 .checkbox-main {
   [class$="MuiButtonBase-root-MuiCheckbox-root"].Mui-checked,
   [class$="MuiButtonBase-root-MuiCheckbox-root"].MuiCheckbox-indeterminate,
