--- a/src/Atoms/Switch/style.scss
+++ b/src/Atoms/Switch/style.scss
@@ -1,3 +1,4 @@
+//Styles for the switch component
 .SwitchComp {
   .MuiButtonBase-root.MuiSwitch-switchBase.Mui-checked {
     color: var(--primary-color);
