--- a/src/Atoms/AvatarIcon/style.scss
+++ b/src/Atoms/AvatarIcon/style.scss
@@ -1,4 +1,6 @@
+//CSS styles for the AvatarIcon component
 .AvatarIcon {
+  //styles the container for the image and sets its dimensions, padding, and border
   .img-area {
     width: 210px;
     height: 210px;
@@ -10,6 +12,7 @@
       height: 200px;
     }
   }
+  //styles the container for the name and sets its border, color, margin, padding, and border-radius
   .name-area {
     border: 2px solid var(--primary-color);
     color: var(--white);
@@ -18,6 +21,7 @@
     text-align: center;
     border-radius: 5px;
   }
+  //styles the AvatarIcon component when it is hovered over and scales it up, as well as changing the color and background-color of the name area
   &:hover {
     transform: scale(1.2);
     .name-area {
